--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,7 @@
 {\scshape\large}
 {}
 {}
-{}
+{\hrulefill}
 
 \titleformat{\subsection}
 {\bfseries\normalsize}
@@ -41,7 +41,11 @@
 	\makeatother
     \vspace{6pt}
 
-    \href{mailto:jatin208015\@gmail.com}{{\faAt} jatin208015\@gmail.com} | {\faPhone } +91-8887982410 | \href{https://github.com/jatinkumar-me}{{\faGithub} jatinkumar-me} | \href{https://www.linkedin.com/in/jatinkumar-2000-me/}{{\faLinkedin} {jatinkumar2000-me}} | {\faMapMarker} Kanpur, UP
+    \href{mailto:jatin208015\@gmail.com}{{\faAt} jatin208015\@gmail.com} | 
+    {\faPhone } +91-8887982410 | 
+    \href{https://github.com/jatinkumar-me}{{\faGithub} jatinkumar-me} |
+    \href{https://www.linkedin.com/in/jatinkumar-2000-me/}{{\faLinkedin} {jatinkumar2000-me}} |
+    {\faMapMarker} Kanpur, UP
 \end{center}
 
 \begin{flushleft}
@@ -50,13 +54,13 @@
 
 \section{Skills}
 \subsubsection*{Programming Languages}
-    JavaScript, TypeScript, Java, Golang
+    JavaScript, TypeScript, Java
     \vspace{-10pt}
 \subsubsection*{Markup Languages}
     HTML5, CSS3, Markdown, \LaTeX
     \vspace{-10pt}
 \subsubsection*{Frameworks and Libraries}
-React.js, Express.js, Node.js, Redux Toolkit, RTK Query, React-router-dom, Material-UI, Chakra-UI, Mantine, Styled-Components, React Native, Next.js
+React.js, Express.js, Node.js, Redux Toolkit, RTK Query, React-router-dom, Material-UI, Chakra-UI, Mantine, Styled-Components, Next.js
     \vspace{-10pt}
 \subsubsection*{Databases}
 MySQL, MongoDB, Redis
@@ -109,7 +113,6 @@ Git, GitHub, VS-Code, Eclipse, Neo-vim, Postman, Linux
     \item Exploding kittens is a simple web-based card game where user has to draw a card out of 5 randomly placed cards. 
     \item Implemented a leader-board system that shows real time score updates of different players currently playing.
 \end{itemize}
-
 
 
 \section{Education}
