--- a/resume.tex
+++ b/resume.tex
@@ -45,7 +45,7 @@
     {\faPhone } +91-8887982410 | 
     \href{https://github.com/jatinkumar-me}{{\faGithub} jatinkumar-me} |
     \href{https://www.linkedin.com/in/jatinkumar-2000-me/}{{\faLinkedin} {jatinkumar2000-me}} |
-    {\faMapMarker} Kanpur, UP
+    {\faMapMarker} Bangalore, Karnataka
 \end{center}
 
 \begin{flushleft}
