Added btp experience

--- a/resume.tex
+++ b/resume.tex
@@ -60,15 +60,32 @@
     HTML5, CSS3, Markdown, \LaTeX
     \vspace{-10pt}
 \subsubsection*{Frameworks and Libraries}
-React.js, Express.js, Node.js, Redux Toolkit, RTK Query, React-router-dom, Material-UI, Chakra-UI, Mantine, Styled-Components, Next.js
+React.js, Express.js, Node.js, Redux Toolkit, RTK Query, React-router-dom, Material-UI, Chakra-UI, Mantine, Styled-Components
     \vspace{-10pt}
 \subsubsection*{Databases}
-MySQL, MongoDB, Redis
+MySQL, MongoDB 
     \vspace{-10pt}
 \subsubsection*{Tools}
 Git, GitHub, VS-Code, Eclipse, Neo-vim, Postman, Linux
 
-\section{Projects}
+\section{Work Experience}
+\subsection{Junior Software Engineer @ Beingtheparent.com}
+\textit{A rapidly growing online discovery platform for parents}
+\hfill
+\textit{September 2023 -- present}
+\textbar
+\textit{ Bangalore (Onsite)}
+
+\vspace{3pt}
+\textbf{Technologies used:}
+JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
+\begin{itemize}
+    \item Worked on development of REST APIs for dashboard and mobile app.
+    \item Optimized form-validation API to reduce latency by 60\%.
+\end{itemize}
+
+
+\section{Personal Projects}
 \subsection{Discourse: an online discussion platform}
 \textit{React, Redux-Toolkit, RTK-Query, Chakra-UI, Node.js, Express.js, MongoDB}
 \hfill
@@ -78,19 +95,18 @@ Git, GitHub, VS-Code, Eclipse, Neo-vim, Postman, Linux
 \begin{itemize}
     \item Built fully responsive user interface with dark mode toggle with Chakra-UI along with an inbuilt rich text editor for adding styled text.  
     \item Implemented functionalities like, upvote, downvote, comment and reply with optimistic updates for instant user feedback along with user authentication and authorization using B-crypt and JWT and form validation using Formik and Yup. 
-    \item Implemented user profile customization with image compression for user uploaded images on the backend to improve performance and load time.
 \end{itemize}
 
-\subsection{Social-Book: full-stack social media app}
-\textit{React, Redux-Toolkit, Material-UI, Node.js, Express.js, MongoDB}
-\hfill
-\href{https://discourse-app.netlify.app/}{ \faLink }
-\textbar
-\href{https://github.com/jatinkumar-me/social-book}{ \faCode}
-\begin{itemize}
-    \item Implemented User authentication and authorization using B-Crypt and JSON Web Token. 
-    \item Added features like comment, like, post, add/remove friend. Additionally, added caching of the state and JWT token on local storage using Redux-persist.
-\end{itemize}
+% \subsection{Social-Book: full-stack social media app}
+% \textit{React, Redux-Toolkit, Material-UI, Node.js, Express.js, MongoDB}
+% \hfill
+% \href{https://discourse-app.netlify.app/}{ \faLink }
+% \textbar
+% \href{https://github.com/jatinkumar-me/social-book}{ \faCode}
+% \begin{itemize}
+%     \item Implemented User authentication and authorization using B-Crypt and JSON Web Token. 
+%     \item Added features like comment, like, post, add/remove friend. Additionally, added caching of the state and JWT token on local storage using Redux-persist.
+% \end{itemize}
 
 \subsection{Type-learn}
 \textit{React, Redux-Toolkit, TypeScript}
@@ -103,16 +119,16 @@ Git, GitHub, VS-Code, Eclipse, Neo-vim, Postman, Linux
     \item Implemented real time feedback on typing accuracy and incorrectly typed text.
 \end{itemize}
 
-\subsection{Exploding-kittens card game}
-\textit{React, Redux-Toolkit, TypeScript, Node.js, Redis-OM, Express.js}
-\hfill
-\href{https://exploding-kittens.netlify.app/}{ \faLink }
-\textbar
-\href{https://github.com/jatinkumar-me/exploding-kittens}{ \faCode}
-\begin{itemize}
-    \item Exploding kittens is a simple web-based card game where user has to draw a card out of 5 randomly placed cards. 
-    \item Implemented a leader-board system that shows real time score updates of different players currently playing.
-\end{itemize}
+% \subsection{Exploding-kittens card game}
+% \textit{React, Redux-Toolkit, TypeScript, Node.js, Redis-OM, Express.js}
+% \hfill
+% \href{https://exploding-kittens.netlify.app/}{ \faLink }
+% \textbar
+% \href{https://github.com/jatinkumar-me/exploding-kittens}{ \faCode}
+% \begin{itemize}
+%     \item Exploding kittens is a simple web-based card game where user has to draw a card out of 5 randomly placed cards. 
+%     \item Implemented a leader-board system that shows real time score updates of different players currently playing.
+% \end{itemize}
 
 
 \section{Education}
