changed experience points

--- a/resume.tex
+++ b/resume.tex
@@ -80,8 +80,10 @@ Git, GitHub, VS-Code, Eclipse, Neo-vim, Postman, Linux
 \textbf{Technologies used:}
 JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 \begin{itemize}
-    \item Worked on development of REST APIs for dashboard and mobile app.
-    \item Optimized form-validation API to reduce latency by 60\%.
+	\item Developed and maintained backend services using Node.js, TypeScript, and Express, ensuring high performance and scalability.
+	\item Implemented notification services for various features of the app. Optimized database queries to boost app performance.
+	\item Implemented user tracking and analytics API, leveraging data-driven insights to enhance decision-making processes and improve overall system performance.
+	\item Implemented real-time chat features using Sockets, enhancing user experience.
 \end{itemize}
 
 
