--- a/resume.tex
+++ b/resume.tex
@@ -5,7 +5,7 @@
 \usepackage{enumitem}
 \usepackage{hyperref}
 
-\author{Jatin Kumar} 
+\author{Jatin Kumar}
 \setcounter{secnumdepth}{0}
 
 \titleformat{\section}
@@ -39,34 +39,34 @@
 	\makeatletter
 	\centering {\huge \@author}
 	\makeatother
-    \vspace{6pt}
+	\vspace{6pt}
 
-    \href{mailto:jatin208015\@gmail.com}{{\faAt} jatin208015\@gmail.com} | 
-    {\faPhone } +91-8887982410 | 
-    \href{https://github.com/jatinkumar-me}{{\faGithub} jatinkumar-me} |
-    \href{https://www.linkedin.com/in/jatinkumar-2000-me/}{{\faLinkedin} {jatinkumar2000-me}} |
-    {\faMapMarker} Bangalore, Karnataka
+	\href{mailto:jatin208015\@gmail.com}{{\faAt} jatin208015\@gmail.com} |
+	{\faPhone } +91-8887982410 |
+	\href{https://github.com/jatinkumar-me}{{\faGithub} jatinkumar-me} |
+	\href{https://www.linkedin.com/in/jatinkumar-2000-me/}{{\faLinkedin} {jatinkumar2000-me}} |
+	{\faMapMarker} Bangalore, Karnataka
 \end{center}
 
 \begin{flushleft}
-    I’m a self-taught \textit{Full-stack web developer}, passionate about learning new technologies and building intuitive and interactive user interfaces. Currently seeking a challenging role at an organization that solves real world problems.
+	I’m a self-taught \textit{Full-stack web developer}, passionate about learning new technologies and building intuitive and interactive user interfaces. Currently seeking a challenging role at an organization that solves real world problems.
 \end{flushleft}
 
 \section{Skills}
 \subsubsection*{Programming Languages}
-    JavaScript, TypeScript, Java
-    \vspace{-10pt}
+JavaScript, TypeScript, Java
+\vspace{-10pt}
 \subsubsection*{Markup Languages}
-    HTML5, CSS3, Markdown, \LaTeX
-    \vspace{-10pt}
+HTML5, CSS3, Markdown, \LaTeX
+\vspace{-10pt}
 \subsubsection*{Frameworks and Libraries}
-React.js, Express.js, Node.js, Redux Toolkit, RTK Query, React-router-dom, Material-UI, Chakra-UI, Mantine, Styled-Components
-    \vspace{-10pt}
+React.js, Express.js, Node.js, Redux Toolkit, RTK Query, React-router-dom, Material-UI, Chakra-UI, Mantine, Styled-Components, Socket.io
+\vspace{-10pt}
 \subsubsection*{Databases}
-MySQL, MongoDB 
-    \vspace{-10pt}
+MySQL, MongoDB
+\vspace{-10pt}
 \subsubsection*{Tools}
-Git, GitHub, VS-Code, Eclipse, Neo-vim, Postman, Linux
+Git, GitHub, VS-Code, Eclipse, Postman, Linux
 
 \section{Work Experience}
 \subsection{Junior Software Engineer @ Beingtheparent.com}
@@ -95,8 +95,8 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 \textbar
 \href{https://github.com/jatinkumar-me/Discourse}{ \faCode}
 \begin{itemize}
-    \item Built fully responsive user interface with dark mode toggle with Chakra-UI along with an inbuilt rich text editor for adding styled text.  
-    \item Implemented functionalities like, upvote, downvote, comment and reply with optimistic updates for instant user feedback along with user authentication and authorization using B-crypt and JWT and form validation using Formik and Yup. 
+	\item Built fully responsive user interface with dark mode toggle with Chakra-UI along with an inbuilt rich text editor for adding styled text.
+	\item Implemented functionalities like, upvote, downvote, comment and reply with optimistic updates for instant user feedback along with user authentication and authorization using B-crypt and JWT and form validation using Formik and Yup.
 \end{itemize}
 
 % \subsection{Social-Book: full-stack social media app}
@@ -117,8 +117,8 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 \textbar
 \href{https://github.com/jatinkumar-me/type-learn}{ \faCode}
 \begin{itemize}
-    \item Built an intuitive user interface along with a virtual keyboard to highlights key presses.
-    \item Implemented real time feedback on typing accuracy and incorrectly typed text.
+	\item Built an intuitive user interface along with a virtual keyboard to highlights key presses.
+	\item Implemented real time feedback on typing accuracy and incorrectly typed text.
 \end{itemize}
 
 % \subsection{Exploding-kittens card game}
