--- a/resume.tex
+++ b/resume.tex
@@ -48,9 +48,11 @@
 	{\faMapMarker} Bangalore, Karnataka
 \end{center}
 
-\begin{flushleft}
-	I’m a self-taught \textit{Full-stack web developer}, passionate about learning new technologies and building intuitive and interactive user interfaces. Currently seeking a challenging role at an organization that solves real world problems.
-\end{flushleft}
+\vspace{-6pt}
+\hrulefill
+\vspace{8pt}
+
+Driven \textit{Full Stack Developer}. Ready to Elevate Career in a Fast-Paced, Small/Mid-level, Product Based (preferrably User-Facing) Company — Adaptable and Driven to Learn, Grow, and Contribute.
 
 \section{Skills}
 \subsubsection*{Programming Languages}
