--- a/resume.tex
+++ b/resume.tex
@@ -74,7 +74,7 @@ Git, GitHub, VS-Code, Eclipse, Postman, Linux
 \subsection{Junior Software Engineer @ Beingtheparent.com}
 \textit{A rapidly growing online discovery platform for parents}
 \hfill
-\textit{September 2023 -- present}
+\textit{September 2023 -- January 2024}
 \textbar
 \textit{ Bangalore (Onsite)}
 
@@ -87,7 +87,9 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 	\item Implemented user tracking and analytics API, leveraging data-driven insights to enhance decision-making processes and improve overall system performance.
 	\item Implemented real-time chat features using Sockets, enhancing user experience.
 \end{itemize}
+	\textbf{References:} 
 
+	Ranjith Kadamboor, \textit{Vice President, Engineering, Beingtheparent} | ranjith@beingtheparent.com, +91-9591994646
 
 \section{Personal Projects}
 \subsection{Discourse: an online discussion platform}
