make headline center

--- a/resume.tex
+++ b/resume.tex
@@ -50,9 +50,11 @@
 
 \vspace{-6pt}
 \hrulefill
-\vspace{8pt}
+\vspace{3pt}
 
-Driven \textit{Full Stack Developer}. Ready to Elevate Career in a Fast-Paced, Small/Mid-level, Product Based (preferrably User-Facing) Company — Adaptable and Driven to Learn, Grow, and Contribute.
+\begin{center}
+Driven \textit{Full Stack Developer}. Ready to Elevate Career in a Fast-Paced, Product Based (preferrably User-Facing) company — Adaptable and Driven to Learn, Grow, and Contribute. --- 
+\end{center}
 
 \section{Skills}
 \subsubsection*{Programming Languages}
