--- a/resume.tex
+++ b/resume.tex
@@ -70,7 +70,7 @@ React.js, Express.js, Node.js, Redux Toolkit, RTK Query, React-router-dom, Mater
 MySQL, MongoDB
 \vspace{-10pt}
 \subsubsection*{Tools}
-Git, GitHub, VS-Code, Eclipse, Postman, Linux
+Git/GitHub, VS-Code, Eclipse, Postman, GNU/Linux
 
 \section{Work Experience}
 \subsection{Junior Software Engineer @ Beingtheparent.com}
