--- a/resume.tex
+++ b/resume.tex
@@ -89,10 +89,10 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 	\item Implemented user tracking and analytics API, leveraging data-driven insights to enhance decision-making processes and improve overall system performance.
 	\item Implemented real-time chat features using Sockets, enhancing user experience.
 \end{itemize}
-	\textbf{References:} 
-
-	Ranjith Kadamboor, \textit{Vice President, Engineering, Beingtheparent} | ranjith@beingtheparent.com, +91-9591994646
-
+	% \textbf{References:} 
+	%
+	% Ranjith Kadamboor, \textit{Vice President, Engineering, Beingtheparent} | ranjith@beingtheparent.com, +91-9591994646
+	%
 \section{Personal Projects}
 \subsection{Discourse: an online discussion platform}
 \textit{React, Redux-Toolkit, RTK-Query, Chakra-UI, Node.js, Express.js, MongoDB}
