--- a/resume.tex
+++ b/resume.tex
@@ -58,7 +58,7 @@ Driven \textit{Full Stack Developer}. Ready to Elevate Career in a Fast-Paced, P
 
 \section{Skills}
 \subsubsection*{Programming Languages}
-JavaScript, TypeScript, Java
+JavaScript, TypeScript, Go, MATLAB
 \vspace{-10pt}
 \subsubsection*{Markup Languages}
 HTML5, CSS3, Markdown, \LaTeX
