added portfolio link

--- a/resume.tex
+++ b/resume.tex
@@ -46,11 +46,12 @@
 	\href{https://github.com/jatinkumar-me}{{\faGithub} jatinkumar-me} |
 	\href{https://www.linkedin.com/in/jatinkumar-2000-me/}{{\faLinkedin} {jatinkumar2000-me}} |
 	{\faMapMarker} Bangalore, Karnataka
+	\href{https://jatin-kumar-me.netlify.app/}{{\faGlobe} https://jatin-kumar-me.netlify.app/}
 \end{center}
 
-\vspace{-6pt}
+\vspace{-10pt}
 \hrulefill
-\vspace{3pt}
+\vspace{-5pt}
 
 \begin{center}
 Driven \textit{Full Stack Developer}. Ready to Elevate Career in a Fast-Paced, Product Based (preferrably User-Facing) company — Adaptable and Driven to Learn, Grow, and Contribute. --- 
@@ -173,4 +174,3 @@ Lead a team of 30+ members to organize various technical events for college's an
 
 
 \end{document}
-
