--- a/resume.tex
+++ b/resume.tex
@@ -54,7 +54,7 @@
 \vspace{-5pt}
 
 \begin{center}
-Driven \textit{Full Stack Developer}. Ready to Elevate Career in a Fast-Paced, Product Based (preferrably User-Facing) company — Adaptable and Driven to Learn, Grow, and Contribute. --- 
+Driven \textit{Full Stack Developer}. Ready to elevate career in a fast-paced, (preferrably user-facing) company — Adaptable and Driven to Learn, Grow, and Contribute.
 \end{center}
 
 \section{Skills}
