--- a/resume.tex
+++ b/resume.tex
@@ -45,7 +45,8 @@
 	{\faPhone } +91-8887982410 |
 	\href{https://github.com/jatinkumar-me}{{\faGithub} jatinkumar-me} |
 	\href{https://www.linkedin.com/in/jatinkumar-2000-me/}{{\faLinkedin} {jatinkumar2000-me}} |
-	{\faMapMarker} Bangalore, Karnataka
+	{\faMapMarker} Kanpur, India
+
 	\href{https://jatin-kumar-me.netlify.app/}{{\faGlobe} https://jatin-kumar-me.netlify.app/}
 \end{center}
 
