--- a/resume.tex
+++ b/resume.tex
@@ -107,16 +107,18 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 	\item Implemented functionalities like, upvote, downvote, comment and reply with optimistic updates for instant user feedback along with user authentication and authorization using B-crypt and JWT and form validation using Formik and Yup.
 \end{itemize}
 
-% \subsection{Social-Book: full-stack social media app}
-% \textit{React, Redux-Toolkit, Material-UI, Node.js, Express.js, MongoDB}
-% \hfill
+\subsection{Collective canvas (under development)}
+\textit{DOM Manipulation, TypeScript, WebSocket, Go}
+\hfill
 % \href{https://discourse-app.netlify.app/}{ \faLink }
 % \textbar
-% \href{https://github.com/jatinkumar-me/social-book}{ \faCode}
-% \begin{itemize}
-%     \item Implemented User authentication and authorization using B-Crypt and JSON Web Token. 
-%     \item Added features like comment, like, post, add/remove friend. Additionally, added caching of the state and JWT token on local storage using Redux-persist.
-% \end{itemize}
+\href{https://github.com/jatinkumar-me/collective-canvas.git}{ \faCode}
+\href{https://github.com/jatinkumar-me/cc-server}{ \faCode}
+\begin{itemize}
+    \item Built a collaborative drawing platform from scratch by leveraging WebSocket and HTML5 Canvas API. 
+    \item Implemented go-routine safe WebSocket server using go standard library, that can handle multiple concurrent connections.
+    \item Implemented various drawing tools like, pencil, rectangle, ellipse, line, flood-fill along with undo-redo functionality.
+\end{itemize}
 
 \subsection{Type-learn}
 \textit{React, Redux-Toolkit, TypeScript}
