--- a/resume.tex
+++ b/resume.tex
@@ -107,28 +107,28 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 	\item Implemented functionalities like, upvote, downvote, comment and reply with optimistic updates for instant user feedback along with user authentication and authorization using B-crypt and JWT and form validation using Formik and Yup.
 \end{itemize}
 
-\subsection{Collective canvas (under development)}
-\textit{DOM Manipulation, TypeScript, WebSocket, Go}
+\subsection{Collective canvas}
+\textit{HTML5 Canvas API, TypeScript, WebSocket, Go}
 \hfill
-% \href{https://discourse-app.netlify.app/}{ \faLink }
-% \textbar
+\href{https://collective-canvas.netlify.app/}{ \faLink}
+\textbar
 \href{https://github.com/jatinkumar-me/collective-canvas.git}{ \faCode}
 \href{https://github.com/jatinkumar-me/cc-server}{ \faCode}
 \begin{itemize}
     \item Built a collaborative drawing platform from scratch by leveraging WebSocket and HTML5 Canvas API. 
-    \item Implemented go-routine safe WebSocket server using go standard library, that can handle multiple concurrent connections.
-    \item Implemented various drawing tools like, pencil, rectangle, ellipse, line, flood-fill along with undo-redo functionality.
+    \item Implemented WebSocket server using go standard library, that can handle multiple concurrent web-socket connections.
+    \item Implemented various drawing tools like, pencil, rectangle, ellipse, flood-fill etc. along with undo-redo functionality.
 \end{itemize}
 
-\subsection{Type-learn}
-\textit{React, Redux-Toolkit, TypeScript}
+\subsection{Go-LRU}
+\textit{Go}
 \hfill
 \href{https://type-learn.netlify.app/}{ \faLink }
 \textbar
 \href{https://github.com/jatinkumar-me/type-learn}{ \faCode}
 \begin{itemize}
-	\item Built an intuitive user interface along with a virtual keyboard to highlights key presses.
-	\item Implemented real time feedback on typing accuracy and incorrectly typed text.
+	\item Go-lru is a concurrent, expirable and thread(goroutine) safe implementation of LRU-Cache.
+	\item Leveraged Go's CSP capabilities to implement non-blocking cache.
 \end{itemize}
 
 % \subsection{Exploding-kittens card game}
