--- a/resume.tex
+++ b/resume.tex
@@ -60,7 +60,7 @@ Driven \textit{Full Stack Developer}. Ready to elevate career in a fast-paced, (
 
 \section{Skills}
 \subsubsection*{Programming Languages}
-JavaScript, TypeScript, Go, MATLAB
+JavaScript, TypeScript, Go, Java
 \vspace{-10pt}
 \subsubsection*{Markup Languages}
 HTML5, CSS3, Markdown, \LaTeX
@@ -107,11 +107,12 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 	\item Implemented functionalities like, upvote, downvote, comment and reply with optimistic updates for instant user feedback along with user authentication and authorization using B-crypt and JWT and form validation using Formik and Yup.
 \end{itemize}
 
-\subsection{Collective canvas (under development)}
+\subsection{Collective canvas}
 \textit{DOM Manipulation, TypeScript, WebSocket, Go}
 \hfill
 % \href{https://discourse-app.netlify.app/}{ \faLink }
 % \textbar
+\href{https://collective-canvas.netlify.app/}{ \faLink }
 \href{https://github.com/jatinkumar-me/collective-canvas.git}{ \faCode}
 \href{https://github.com/jatinkumar-me/cc-server}{ \faCode}
 \begin{itemize}
