add java, springboot and angular

--- a/resume.tex
+++ b/resume.tex
@@ -60,19 +60,19 @@ Driven \textit{Full Stack Developer}. Ready to elevate career in a fast-paced, (
 
 \section{Skills}
 \subsubsection*{Programming Languages}
-JavaScript, TypeScript, Go, MATLAB
+Java, JavaScript, TypeScript, Go, MATLAB
 \vspace{-10pt}
 \subsubsection*{Markup Languages}
 HTML5, CSS3, Markdown, \LaTeX
 \vspace{-10pt}
 \subsubsection*{Frameworks and Libraries}
-React.js, Express.js, Node.js, Redux Toolkit, RTK Query, React-router-dom, Material-UI, Chakra-UI, Mantine, Styled-Components, Socket.io
+Angular, RxJs, React.js, Spring Boot, Express.js, Node.js, Redux Toolkit, Socket.io
 \vspace{-10pt}
 \subsubsection*{Databases}
 MySQL, MongoDB
 \vspace{-10pt}
 \subsubsection*{Tools}
-Git/GitHub, VS-Code, Eclipse, Postman, GNU/Linux
+Git/GitHub, VS-Code, Eclipse, GNU/Linux
 
 \section{Work Experience}
 \subsection{Junior Software Engineer @ Beingtheparent.com}
