--- a/resume.tex
+++ b/resume.tex
@@ -55,7 +55,7 @@
 \vspace{-8pt}
 
 \begin{center}
-Driven \textit{Full Stack Developer}. Ready to elevate career in a fast-paced, (preferrably user-facing) company — Adaptable and Driven to Learn, Grow, and Contribute.
+Driven \textit{Full Stack Developer}. Ready to elevate career in a fast-paced company — Adaptable and Driven to Learn, Grow, and Contribute.
 \end{center}
 
 \section{Skills}
