add wipro experience

--- a/resume.tex
+++ b/resume.tex
@@ -58,6 +58,8 @@
 Driven \textit{Full Stack Developer}. Ready to elevate career in a fast-paced company — Adaptable and Driven to Learn, Grow, and Contribute.
 \end{center}
 
+\vspace{-13pt}
+
 \section{Skills}
 \subsubsection*{Programming Languages}
 Java, JavaScript, TypeScript, Go, MATLAB
@@ -75,6 +77,21 @@ MySQL, MongoDB
 Git/GitHub, VS-Code, Eclipse, GNU/Linux
 
 \section{Work Experience}
+
+\subsection{Project Engineer @  Wipro}
+\vspace{3pt}
+\textbf{Technologies used:}
+Java, Spring Boot, Angular, Microservices
+\hfill
+\textit{October 2024 -- Present}
+\textbar
+\textit{ Hyderabad }
+
+\begin{itemize}
+	\item Enhanced technical skills by completing online courses in Spring Boot and Angular to stay current with industry trends.	
+	\item Developed proof-of-concept (PoC) projects to explore potential solutions, demonstrating initiative and technical competence.
+\end{itemize}
+
 \subsection{Junior Software Engineer @ Beingtheparent.com}
 \textit{A rapidly growing online discovery platform for parents}
 \hfill
@@ -89,7 +106,6 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 	\item Developed and maintained backend services using Node.js, TypeScript, and Express, ensuring high performance and scalability.
 	\item Implemented notification services for various features of the app. Optimized database queries to boost app performance.
 	\item Implemented user tracking and analytics API, leveraging data-driven insights to enhance decision-making processes and improve overall system performance.
-	\item Implemented real-time chat features using Sockets, enhancing user experience.
 \end{itemize}
 \section{Personal Projects}
 \subsection{Discourse: an online discussion platform}
