--- a/resume.tex
+++ b/resume.tex
@@ -119,6 +119,15 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
 	\item Implemented functionalities like, upvote, downvote, comment and reply with optimistic updates for instant user feedback along with user authentication and authorization using B-crypt and JWT and form validation using Formik and Yup.
 \end{itemize}
 
+\subsection{Organic Bazaar: An online platform for organic products}
+\textit{Java, Spring Boot, Angular, Microservices}
+\hfill
+\href{https://github.com/jatinkumar-me/organic-bazaar}{ \faLink }
+\begin{itemize}
+	\item Implemented a POC solution for users to effortlessly buy organic fruits, vegetables, and pulses on orders as well as monthly subscription services. 
+\end{itemize}
+
+
 \subsection{Collective canvas}
 \textit{HTML5 Canvas API, TypeScript, WebSocket, Go}
 \hfill
@@ -130,17 +139,6 @@ JavaScript, TypeScript, Node.js, React.js, SQL, MongoDB
     \item Built a collaborative drawing platform from scratch by leveraging WebSocket and HTML5 Canvas API. 
     \item Implemented WebSocket server using go standard library, that can handle multiple concurrent web-socket connections.
     \item Implemented various drawing tools like, pencil, rectangle, ellipse, flood-fill etc. along with undo-redo functionality.
-\end{itemize}
-
-\subsection{Go-LRU}
-\textit{Go}
-\hfill
-\href{https://type-learn.netlify.app/}{ \faLink }
-\textbar
-\href{https://github.com/jatinkumar-me/type-learn}{ \faCode}
-\begin{itemize}
-	\item Go-lru is a concurrent, expirable and thread(goroutine) safe implementation of LRU-Cache.
-	\item Leveraged Go's CSP capabilities to implement non-blocking cache.
 \end{itemize}
 
 \section{Education}
